@@ -7,10 +7,33 @@ repositories {
     mavenCentral()
 }
 
+dependencies {
+    implementation(project(":jitExecutors"))
+}
+
 java {
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(23))
+        vendor.set(JvmVendorSpec.ADOPTIUM)
+        implementation.set(JvmImplementation.VENDOR_SPECIFIC)
     }
+}
+
+tasks.withType<JavaCompile>().configureEach {
+    javaCompiler = javaToolchains.compilerFor {
+        languageVersion = JavaLanguageVersion.of(23)
+    }
+    options.compilerArgs.add("--enable-preview")
+}
+
+var nativeLibPath = "../jitExecutors/build/cmake/"
+
+tasks.withType<JavaExec> {
+    jvmArgs = listOf(
+        "--enable-preview",
+        "-Djava.library.path=${file(nativeLibPath).absolutePath}",
+        "--enable-native-access=ALL-UNNAMED"
+    )
 }
 
 tasks.jar {
